roles/todo/files/addon/ingress/traefik-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    app: traefik-ingress-lb
  ports:
    - protocol: TCP
      # 该端口为 traefik 的管理WEB界面
      port: 8080
      name: admin
#  type: NodePort
