roles/todo/files/addon/ingress/prometheus-alertmanager-main.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager-main
  namespace: monitoring
spec:
  rules:
  - host: prometheus-alter.test.fruitday.com
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager-main
          servicePort: 9093
