roles/todo/files/addon/ingress/prometheus-grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: prometheus-grafana.test.fruitday.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
