roles/todo/files/addon/ingress/tomcat-demo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat
spec:
  rules:
  - host: tomcat.test.fruitday.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat
          servicePort: 8080


# kubectl run tomcat --image=tomcat --replicas=3 --expose --port=8080
